style.css
/* ... */
.home #screen-fill span {
  position: absolute;
  bottom: 0;
}

@media screen and (max-width: 1200px) {
  .home .information-entry {
    height: 220px;
  }

  .home .example-entry {
    height: 170px;
  }
}

@media screen and (max-width: 900px) {
  .home #screen-fill {
    display: none;
  }

  .home header.fading {
    opacity: 1.0 !important;
  }

  .home .left {
    float: none;
  }

  .home .right {
    float: none;
  }

  .home .information-column {
    width: 100%;
    margin-right: 0px;
    margin-left: 0px;
  }

  .home .example-column {
    width: 80%;
    margin-left: 40px !important;
    margin-right: 0px;
  }

  .home .example-entry {
    height: auto;
  }

  .home .information-entry {
    height: auto;
  }

  .home .icon:before {
    margin-left: -40px !important;
    font-size: 30px !important;
    margin-top: -10px !important;
  }

  footer {
    text-align: center;
  }

  footer .footer-left {
    float: none !important;
  }

  footer .footer-right {
    float: none !important;
  }

  .footer-right #a8c-image {
    float: none !important;
    display: inline-block !important;
  }

  .site-info span {
    display: block;
  }

  #site-navigation li.menu-item {
    display: block;
    float: left;
  }

  #menu-item-43 {
    float: none !important;
    margin: 0 0 0 0;
  }

  #menu-item-43 a {
    display: block !important;
    float: left !important;
    background: none !important;
    padding: 0 0 !important;
    border: none !important;
    color: rgb(54, 54, 54);
    font-size: inherit;
    font-weight: normal;
  }
}

/* Home icons */
.home .icon:before {
  font-family: 'untitled-font-2';
  position: absolute;
  margin-left: -80px;
  margin-top: -15px;
  font-size: 70px;
}

.home .analytics:before {
  content: "y";
}

.home .binary:before {
  content: "G";
}

.home .chat:before {
  content: "M";
}

.home .collab:before {
  content: "J";
}

/* Footer stuff */
footer {
  font-size: 11px;
  margin: 20px;
  vertical-align: middle;
}

footer .footer-left {
  float: left;
}

footer .footer-right {
  float: right;
}

.footer-right #a8c-image {
  float: right;
  margin-left: 5px;
  width: 20px;
  height: 20px;
  background-size: cover;
  background-image: url('imgs/a8c.png');
}

#menu-item-43 {
  float: right;
  padding: 0;
  margin: 15px 0 0 0;
}

#menu-item-43 a {
  display: inline-block;
  background: rgb(219, 122, 238);
  border: 0;
  padding: 4px 12px;
  vertical-align: middle;
  border-radius: 12px;
  color: #fff;
  font-size: 12px;
  font-weight: bold;
  color: #fff;
}

/* Codes */
pre {
  padding: 0.3em;
  padding-left: 0.8em;
  border-left: 0.5em solid #D8D8D8;
  background: white;
}

pre code {
  color: rgb(119, 119, 119);
  font-weight: lighter;
  font-size: 13px;
}

